--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-use-state": "^1.1.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.24.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
